begin overwrite of devise sessions controller to turn devise into api solution, fixed misaligned header

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -96,7 +96,7 @@ li.navbar-link.navbar-text {
 }
 
 #clientIndexBanner {
-  margin-top: -20px;
+  margin-top: 0px;
   text-align: center;
 }
 
